USE DATABASE BASE_TECHNIQUE;
USE SCHEMA PUBLIC;

CREATE TABLE IF NOT EXISTS SUIVI_RUN (
    RUN_ID INTEGER PRIMARY KEY  NOT NULL,
    RUN_STRT_DTTM TIMESTAMP(0) NOT NULL,
    RUN_END_DTTM TIMESTAMP(0),
    RUN_STTS_CD VARCHAR(10) NOT NULL
);

CREATE TABLE IF NOT EXISTS SUIVI_TRAITEMENT (
    RUN_ID INTEGER NOT NULL,
    EXEC_ID INTEGER PRIMARY KEY NOT NULL,
    SCRPT_NAME VARCHAR(250) NOT NULL,
    EXEC_STRT_DTTM TIMESTAMP(0) NOT NULL, 
    EXEC_END_DTTM TIMESTAMP(0) NOT NULL,
    EXEC_STTS_CD VARCHAR(10) NOT NULL,
    FOREIGN KEY (RUN_ID) REFERENCES SUIVI_RUN(RUN_ID)
);
