USE DATABASE BASE_SOCLE;
USE SCHEMA PUBLIC;

-- PARTY
CREATE TABLE IF NOT EXISTS PARTY (
    PART_ID INTEGER PRIMARY KEY NOT NULL,
    SRC_ID INTEGER NOT NULL,
    SRC_TYP VARCHAR(50) NOT NULL
);

-- ROOMID 
CREATE TABLE IF NOT EXISTS ROOM (
    ROOM_NUM INTEGER PRIMARY KEY NOT NULL,
    ROOM_NAME VARCHAR(20) NOT NULL,
    FLOR_NUM INTEGER,
    BULD_NAME VARCHAR(20),
    ROOM_TYP VARCHAR(10),
    ROOM_DAY_RATE INTEGER NOT NULL,
    CRTN_DT DATE NOT NULL,
    EXEC_ID INTEGER NOT NULL
);

-- MEDICINE
CREATE TABLE IF NOT EXISTS MEDICINE (
    MEDC_ID INTEGER PRIMARY KEY NOT NULL,
    MEDC_CD VARCHAR(10) NOT NULL,
    MEDC_NAME VARCHAR(250),
    MEDC_COND VARCHAR(100),
    MEDC_CATG VARCHAR(100) NOT NULL,
    MANF_BRND VARCHAR(100) NOT NULL,
    EXEC_ID INTEGER NOT NULL
);

-- INDIVIDUAL
CREATE TABLE IF NOT EXISTS INDIVIDUAL (
    PART_ID INTEGER PRIMARY KEY REFERENCES PARTY(PART_ID) NOT NULL,
    INDV_NAME VARCHAR(100) NOT NULL,
    INDV_FIRS_NAME VARCHAR(100) NOT NULL,
    INDV_STTS_CD VARCHAR(10) NOT NULL,
    CRTN_DTTM TIMESTAMP(0) NOT NULL,
    UPDT_DTTM TIMESTAMP(0) NOT NULL,
    BIRT_DT DATE,
    BIRT_CITY VARCHAR(100),
    BIRT_CNTR VARCHAR(100),
    SOCL_NUM VARCHAR(15), 
    EXEC_ID INTEGER NOT NULL
);

-- STAFF
CREATE TABLE IF NOT EXISTS STAFF (
    PART_ID INTEGER PRIMARY KEY REFERENCES PARTY(PART_ID) NOT NULL,
    WORK_STRT_DTTM TIMESTAMP(0) NOT NULL,
    WORK_END_DTTM TIMESTAMP(0),
    WORK_END_RESN VARCHAR(100),
    EXEC_ID INTEGER NOT NULL
);

-- TELEPHONE
CREATE TABLE IF NOT EXISTS TELEPHONE (
    PART_ID INTEGER REFERENCES PARTY(PART_ID) NOT NULL,
    CNTR_IND VARCHAR(5),
    TELP_NUM VARCHAR(20) NOT NULL,
    STRT_VALD_DTTM TIMESTAMP(0) NOT NULL,
    END_VALD_DTTM TIMESTAMP(0) NOT NULL,
    EXEC_ID INTEGER NOT NULL,
    PRIMARY KEY(PART_ID, STRT_VALD_DTTM)
);

-- ADDRESS
CREATE TABLE IF NOT EXISTS ADDRESS (
    PART_ID INTEGER NOT NULL REFERENCES PARTY(PART_ID),
    STRT_NUM VARCHAR(10) NOT NULL,
    STRT_DSC VARCHAR(250) NOT NULL,
    COMP_STRT VARCHAR(250),
    POST_CD VARCHAR(10) NOT NULL,
    CITY_NAME VARCHAR(100),
    CNTR_NAME VARCHAR(100),
    STRT_VALD_DTTM TIMESTAMP(0) NOT NULL,
    END_VALD_DTTM TIMESTAMP(0) NOT NULL,
    EXEC_ID INTEGER NOT NULL,
    PRIMARY KEY (PART_ID, STRT_VALD_DTTM) 
);


-- CONSULTATION (avant TREATMENT, car TREATMENT en dépend)
CREATE TABLE IF NOT EXISTS CONSULTATION (
    CONS_ID INTEGER PRIMARY KEY NOT NULL,
    STFF_ID INTEGER REFERENCES STAFF(PART_ID) NOT NULL,
    PATN_ID INTEGER REFERENCES INDIVIDUAL(PART_ID) NOT NULL,
    CONS_STRT_DTTM TIMESTAMP(0) NOT NULL,
    CONS_END_DTTM TIMESTAMP(0) NOT NULL,
    PATN_WEGH FLOAT NOT NULL,
    PATN_TEMP FLOAT,
    TEMP_UNIT VARCHAR(15),
    BLD_PRSS FLOAT,
    PATH_DSC VARCHAR(250),
    DIBT_IND BOOLEAN,
    HOSP_IND BOOLEAN,
    EXEC_ID INTEGER NOT NULL
);

-- TREATMENT (après CONSULTATION)
CREATE TABLE IF NOT EXISTS TREATMENT (
    TRET_ID INTEGER PRIMARY KEY NOT NULL,
    MEDC_ID INTEGER REFERENCES MEDICINE(MEDC_ID) NOT NULL,
    MEDC_QTY INTEGER,
    DOSG_DSC VARCHAR(100) NOT NULL,
    CONS_ID INTEGER REFERENCES CONSULTATION(CONS_ID) NOT NULL,
    TRET_CRTN_DTTM TIMESTAMP(0) NOT NULL,
    EXEC_ID INTEGER NOT NULL
);

-- HOSPITALIZATION (dernière table)
CREATE TABLE IF NOT EXISTS HOSPITALIZATION (
    HOSP_ID INTEGER PRIMARY KEY NOT NULL,
    CONS_ID INTEGER REFERENCES CONSULTATION(CONS_ID) NOT NULL,
    ROOM_NUM INTEGER REFERENCES ROOM(ROOM_NUM) NOT NULL,
    HOSP_STRT_DTTM TIMESTAMP(0) NOT NULL,
    HOSP_END_DTTM TIMESTAMP(0) NOT NULL,
    HOSP_FINL_RATE FLOAT NOT NULL,
    STFF_ID INTEGER REFERENCES STAFF(PART_ID) NOT NULL,
    EXEC_ID INTEGER NOT NULL
);
